--- a/login_form.html
+++ b/login_form.html
@@ -7,7 +7,22 @@
 </head>
 <body>
     <center>
-        <img src = "images/profile.png" width = "100" height="100">
+        <img src = "images/profile.png" width = "100" height="100"><br><br>
     </center>
+
+    <form name="login-form" action="" method="post"></form>
+        <table border="0" align="center">
+            <tr><td><label>Username:</label></td></tr>
+            <tr><td><input type="email" required></td></tr>
+            <tr><td><label>Password:</label></td></tr>  
+            <tr><td><input type="password" required></td></tr> 
+            <tr><td align="center"><button>Sign in</button></td></tr>
+        </table>
+    </form>
+    <center>
+        <br><a href="#">Sign up</a>
+        <br><a href="#">Forgot password</a>
+        <br><a href="#">Term and conditions</a>
+    </center>   
 </body>
 </html>
