--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <table class="table">
+    <table class="table table-bordered">
         <tr class="table-primary"> 
           <th>ID</th>
           <th>Firstname</th>
@@ -41,21 +41,22 @@
         
         <tr class="table-info">
             <th>3</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>Khalid</th>
+            <th>Al-Mansouri</th>
+            <th>khalid@gmail.com/th>
+            <th>Avenue Hassan II, Quartier Maârif</th>
+            <th>+6236542356</th>
+            <th><img src="images/icono-marco-fotos-foto-vacia-blanco-vector-sobre-fondo-transparente-aislado-eps-10_399089-1290.avif" 
+                width = "80" height="80"></th>
         </tr>
 
         <tr class="table-warning">
             <th>4</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>Youssef</th>
+            <th>Ben Khalifa</th>
+            <th>youssef@gmail.com</th>
+            <th>West Bay, The Pearl-Qatar</th>
+            <th>+6235642389</th>
             <th></th>
         </tr>
     </table>
