--- a/table.html
+++ b/table.html
@@ -9,6 +9,28 @@
 </head>
 <body>
     <table class="table table-bordered">
+        <tr>
+            <th>Hit me up</th>
+        </tr>
+
+        <tr>
+            <th>ID</th>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th> 
+            <th>Address</th>
+            <th>Mobile</th>
+            <th>Photo</th>
+        </tr>
+
+
+
+    </table>
+
+
+
+
+    <table class="table table-bordered">
         <tr class="table-primary"> 
           <th>ID</th>
           <th>Firstname</th>
@@ -26,7 +48,8 @@
             <th>omar@gmail.com</th>
             <th>Al-Olaya Street, Tower Center, Floor 5</th>
             <th>+6235642356</th>
-            <th></th>
+            <th><img src="images/icono-marco-fotos-foto-vacia-blanco-vector-sobre-fondo-transparente-aislado-eps-10_399089-1290.avif" 
+                width = "80" height="80"></th>
         </tr>
 
         <tr class="table-danger">
@@ -36,7 +59,8 @@
             <th>layla@gmail.com</th>
             <th>Sheikh Zayed Road, Business Bay </th>
             <th>+6235444356</th>
-            <th></th>
+            <th><img src="images/icono-marco-fotos-foto-vacia-blanco-vector-sobre-fondo-transparente-aislado-eps-10_399089-1290.avif" 
+                width = "80" height="80"></th>
         </tr>
         
         <tr class="table-info">
@@ -57,7 +81,8 @@
             <th>youssef@gmail.com</th>
             <th>West Bay, The Pearl-Qatar</th>
             <th>+6235642389</th>
-            <th></th>
+            <th><img src="images/icono-marco-fotos-foto-vacia-blanco-vector-sobre-fondo-transparente-aislado-eps-10_399089-1290.avif" 
+                width = "80" height="80"></th>
         </tr>
     </table>
 
